# routes/utils/user_utils.js
@@ -1,3 +1,4 @@
+const { NText } = require("mssql");
 const DButils = require("./DButils");
 const recipes_utils = require("./recipes_utils");
 
@@ -10,15 +11,24 @@ async function markAsWatched(user_name, recipe_id) {
 }
 
 async function getMyRecipes(user_name) {
-    const myRecipes = await DButils.execQuery(`SELECT * FROM user_recipes WHERE user_name='${user_name}'`);
-    for (let i = 0; i < myRecipes.length; i++) {
-        myRecipes[i].ingredients = await getRecipeIngredients(myRecipes[i].title);
+    let myRecipes = await DButils.execQuery(`SELECT * FROM user_recipes WHERE user_name='${user_name}'`);
+    if (myRecipes.length > 0) {
+        myRecipes = extractPreviewRecipesData(myRecipes);
     }
     return myRecipes;
 }
 
-async function getRecipeIngredients(title) {
-    let ingredientsFromDb = await DButils.execQuery(`SELECT * FROM recipes_ingredients WHERE recipe_title='${title}'`);
+
+async function getMyFamilyRecipes(user_name) {
+    let myRecipes = await DButils.execQuery(`SELECT * FROM user_family_recipes WHERE user_name='${user_name}'`);
+    if (myRecipes.length > 0) {
+        myRecipes = extractPreviewRecipesData(myRecipes);
+    }
+    return myRecipes;
+}
+
+async function getRecipeIngredients(id) {
+    let ingredientsFromDb = await DButils.execQuery(`SELECT * FROM recipes_ingredients WHERE recipe_id='${id}'`);
     let ingredients = [];
     for (let i = 0; i < ingredientsFromDb.length; i++) {
         ingredients.push(ingredientsFromDb[i].ingredient);
@@ -26,12 +36,23 @@ async function getRecipeIngredients(title) {
     return ingredients;
 }
 
-async function getFavoriteRecipes(user_name) {
+async function getRecipe(user_name, id) {
+    let myRecipe = await DButils.execQuery(`SELECT * FROM user_recipes WHERE user_name='${user_name}' AND id=${id}`);
+    myRecipe.ingredients = await getRecipeIngredients(myRecipe[0].id);
+    return myRecipe;
+}
+
+async function getFamilyRecipe(user_name, id) {
+    let myRecipe = await DButils.execQuery(`SELECT * FROM user_family_recipes WHERE user_name='${user_name}' AND id=${id}`);
+    myRecipe.ingredients = await getRecipeIngredients(myRecipe[0].id);
+    return myRecipe;
+}
+
+async function getFavoriteRecipesIds(user_name) {
     const favorites = await DButils.execQuery(`SELECT recipe_id FROM favorite_recipes WHERE user_name='${user_name}'`);
     const recipes = [];
-    console.log(favorites);
     for (let i = 0; i < favorites.length; i++) {
-        recipes.push(await recipes_utils.getRecipeDetails(favorites[i].recipe_id));
+        recipes.push(favorites[i].recipe_id);
     }
     return favorites;
 }
@@ -48,17 +69,39 @@ async function getLastWatchedRecipesIds(user_name) {
 async function addRecipeToDb(user_name, recipe) {
     recipe.instructions = recipe.instructions.replace("'", "''");
     recipe.image = recipe.image.replace(/\\/g, "\\\\");
-    await DButils.execQuery(`INSERT INTO user_recipes VALUES ('${user_name}', '${recipe.title}', ${recipe.readyInMinutes}, '${recipe.image}', ${recipe.popularity}, ${recipe.vegan}, ${recipe.vegetarian}, ${recipe.glutenFree}, '${recipe.instructions}', ${recipe.servings})`);
-    console.log(recipe.ingredients.length)
+    await DButils.execQuery(`INSERT INTO user_recipes(user_name, title, readyInMinutes, image, popularity, vegan, vegetarian, glutenFree, instructions, servings) VALUES ('${user_name}', '${recipe.title}', ${recipe.readyInMinutes}, '${recipe.image}', ${recipe.popularity}, ${recipe.vegan}, ${recipe.vegetarian}, ${recipe.glutenFree}, '${recipe.instructions}', ${recipe.servings})`);
+    res = await DButils.execQuery(`SELECT MAX(id) AS id FROM user_recipes`);
+    recipe.id = res[0].id;
     for (let i = 0; i < recipe.ingredients.length; i++) {
         ingredient = recipe.ingredients[i].replace("'", "''");
-        await DButils.execQuery(`INSERT INTO recipes_ingredients VALUES ('${recipe.title}', '${ingredient}')`);
+        await DButils.execQuery(`INSERT INTO recipes_ingredients VALUES (${recipe.id}, '${ingredient}')`);
     }
+}
+
+const extractPreviewRecipesData = (recipes) => {
+    const reducedNonRelevance = [];
+    for (let i = 0; i < recipes.length; i++) {
+        let { id, title, readyInMinutes, image, popularity, vegan, vegetarian, glutenFree } = recipes[i];
+        reducedNonRelevance.push({
+            id: id,
+            title: title,
+            readyInMinutes: readyInMinutes,
+            image: image,
+            popularity: popularity,
+            vegan: vegan,
+            vegetarian: vegetarian,
+            glutenFree: glutenFree,
+        });
+    }
+    return reducedNonRelevance;
 }
 
 exports.addRecipeToDb = addRecipeToDb;
 exports.getMyRecipes = getMyRecipes;
 exports.markAsFavorite = markAsFavorite;
-exports.getFavoriteRecipes = getFavoriteRecipes;
+exports.getFavoriteRecipesIds = getFavoriteRecipesIds;
 exports.getLastWatchedRecipesIds = getLastWatchedRecipesIds;
 exports.markAsWatched = markAsWatched
+exports.getMyFamilyRecipes = getMyFamilyRecipes;
+exports.getRecipe = getRecipe;
+exports.getFamilyRecipe = getFamilyRecipe;
